fixed logo path

--- a/ui/client/index.html
+++ b/ui/client/index.html
@@ -28,7 +28,7 @@
 
 <template name="upper_chrome">
     <div class="header">
-        <img src="../public/images/slac_logo.png" />
+        <img src="/images/slac_logo.png" />
         <div class="sitename">SLAC Data Center Temperature and Humidity</div>
     </div>
 </template>
