Some window dressing

--- a/ui/client/index.html
+++ b/ui/client/index.html
@@ -28,7 +28,9 @@
 
 <template name="upper_chrome">
     <div class="header">
-        <img src="/images/slac_logo.png" />
+        <div class="logo">
+            <img src="/images/slac_logo.png" />
+        </div>
         <div class="sitename">SLAC Data Center Temperature and Humidity</div>
     </div>
 </template>
