--- a/ui/client/index.html
+++ b/ui/client/index.html
@@ -6,10 +6,11 @@
   {{>upper_chrome}}
   <div name="heatmap">
     <canvas id="heatmap" width="1000px" height="800px" ></canvas>
+    <canvas id="heatmap2" width="1000px" height="800px"></canvas>
   </div>
 
   {{> sensor_list}}
-  {{> lower_chrome}}
+
 </body>
 
 <template name="sensor_list">
