Handoff to Yeee

--- a/ui/client/index.html
+++ b/ui/client/index.html
@@ -6,7 +6,7 @@
   {{>upper_chrome}}
   <div name="heatmap">
     <canvas id="heatmap" width="1000px" height="1000px" ></canvas>
-    <canvas id="heatmap2" width="1000px" height="1000px"></canvas>
+    <!--<canvas id="heatmap2" width="1000px" height="1000px"></canvas> -->
   </div>
 
   {{> sensor_list}}
