added real locations of sensors

--- a/ui/client/index.html
+++ b/ui/client/index.html
@@ -24,7 +24,7 @@
 
 <template name="sensor_item">
   <ul class="sensor_item">
-    <li>{{_id}}: time={{ts}} {{temp}}C {{humidity}}%</li>
+    <li>{{desc}} / {{_id}}: time={{ts}} {{temp}}C {{humidity}}%</li>
   </ul>
 </template>
 
