migrate to livestamp

--- a/ui/client/index.html
+++ b/ui/client/index.html
@@ -29,7 +29,7 @@
 
 <template name="sensor_item">
 <tr>
-  <td>{{description _id}}</td><td>{{temp}}C</td><td>{{humidity}}%</td><td>({{time_delta ts}})</td>
+  <td>{{description _id}}</td><td>{{temp}}C</td><td>{{humidity}}%</td><td>({{livestamp ts}})</td>
 </tr>
 </template>
 
