got heatmap.js to work

--- a/ui/client/index.html
+++ b/ui/client/index.html
@@ -5,9 +5,9 @@
 <body>
   {{>upper_chrome}}
   <div name="heatmap" class="heatmap">
-    <!-- <canvas id="floorplan" width="1000px" height="800px" ></canvas> -->
+    <canvas id="floorplan" width="1000px" height="800px" ></canvas>
     <!-- <canvas id="heatmap" width="1000px" height="800px"></canvas> -->
-    <!-- <canvas id="contrast_circle" width="1000px" height="800px"></canvas> -->
+    <canvas id="contrast_circle" width="1000px" height="800px"></canvas>
   </div>
 
   {{> sensor_list}}
