Styling sensor list

--- a/ui/client/index.html
+++ b/ui/client/index.html
@@ -15,7 +15,7 @@
 </body>
 
 <template name="sensor_list">
-    <div sensor_wrapper>
+    <div id="sensor_wrapper">
       <ul class="sensor_list">
           {{#each sensors}}
             {{> sensor_item}}
